src/objects/Net_Worth_History__c.object
<CustomObject>
    <description>XLR8 custom object that stores the snapshot history of Entity Net Worth values.</description>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <formula>Snapshot_Date__c -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Net Worth Histories</relationshipLabel>
        <relationshipName>Net_Worth_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Worth_Adjusted__c</fullName>
        <label>Net Worth (Adjusted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields>
    <label>Net Worth History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NWH-{0000}</displayFormat>
        <label>Net Worth History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Net Worth History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>